tests/snapshots/r#mod__special_chars__newline.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\newline\").unwrap().cst"
---
edn [0..8]
    composed [0..8]
        char [0..8]
            CharEscape "\\" [0..1]
            Chars "newline" [1..8]
