tests/snapshots/r#mod__special_chars__non_unicode_long_err.snap
---
source: tests/special_chars.rs
expression: error_json
---
[
  {
    "severity": "Error",
    "code": null,
    "message": "invalid syntax, expected: <chars>",
    "labels": [
      {
        "style": "Primary",
        "file_id": null,
        "range": {
          "start": 1,
          "end": 7
        },
        "message": ""
      }
    ],
    "notes": []
  }
]
