tests/snapshots/r#mod__special_chars__random.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\random\").unwrap().cst"
---
edn [0..7]
    literal [0..7]
        char [0..7]
            CharEscape "\\" [0..1]
            Chars "random" [1..7]
