tests/snapshots/r#mod__special_chars__return_char.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\return\").unwrap().cst"
---
edn [0..7]
    literal [0..7]
        Chars "\\return" [0..7]
