tests/snapshots/r#mod__special_chars__space.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\space\").unwrap().cst"
---
edn [0..6]
    literal [0..6]
        Chars "\\space" [0..6]
