tests/snapshots/r#mod__special_chars__tab.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\tab\").unwrap().cst"
---
edn [0..4]
    literal [0..4]
        Chars "\\tab" [0..4]
