tests/snapshots/r#mod__special_chars__unicode.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\u0000\").unwrap().cst"
---
edn [0..6]
    composed [0..6]
        char [0..6]
            CharEscape "\\" [0..1]
            Chars "u0000" [1..6]
